src/objects/Apex_Event_Log__c.object
<CustomObject>
    <fields>
        <fullName>Event_Details__c</fullName>
        <label>Event Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_Error_Message__c</fullName>
        <label>Event Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_ID__c</fullName>
        <description>Though length is 18 this may also log as &apos;0&apos; in some apex exceptions.</description>
        <label>Event ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>For storing the SObject type in exception logging.</description>
        <label>Event Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Apex Event Log</label>
    <nameField>
        <displayFormat>ApxEvtLg-{0000}</displayFormat>
        <label>Apex Event Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Apex Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>